core/coredns/overlays/prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coredns
  namespace: kube-system
  labels:
    k0s.k0sproject.io/stack: coredns
    k8s-app: kube-dns
    kubernetes.io/name: CoreDNS
spec:
  template:
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: coredns
            items:
              - key: Corefile
                path: Corefile
              - key: ch1.deepsquare.run.db
                path: ch1.deepsquare.run.db
              - key: csquare.gcloud.db
                path: csquare.gcloud.db
              - key: at1.deepsquare.run.db
                path: at1.deepsquare.run.db
              - key: deepsquare.gcloud.db
                path: deepsquare.gcloud.db
            defaultMode: 420
